[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tf_transformations"
version = "1.1.0"
description = "Reimplementation of the tf/transformations.py library for common Python spatial operations"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "David V. Lu!!", email = "davidvlu@gmail.com" },
]
dependencies = [
    "numpy>=1.20",
    "transforms3d>=0.4",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tf_transformations*"]

[tool.setuptools.data-files]
"share/ament_index/resource_index/packages" = ["resource/tf_transformations"]
"share/tf_transformations" = ["package.xml"]

